apps/navidrome/slskd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: slskd
  name: slskd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: slskd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: slskd
    spec:
      containers:
        - env:
            - name: SLSKD_REMOTE_CONFIGURATION
              value: "true"           
          image: slskd/slskd:latest
          name: slskd
          ports:
            - containerPort: 5030
              protocol: TCP
            - containerPort: 5031
              protocol: TCP
            - containerPort: 50300
              protocol: TCP
          volumeMounts:
            - mountPath: /app
              name: slskd-app
            - mountPath: /data
              name: data
      restartPolicy: Always
      volumes:
        - name: slskd-app
          persistentVolumeClaim:
            claimName: slskd-app
        - name: data
          persistentVolumeClaim:
            claimName: data
