apps/navidrome/lidarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: lidarr
  name: lidarr
spec:
  ports:
    - name: "8686"
      port: 80
      targetPort: 8686
  selector:
    io.kompose.service: lidarr
