apps/navidrome/slskd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: slskd
  name: slskd
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 5030
    - name: "5031"
      port: 443
      targetPort: 5031
    - name: "50300"
      port: 50300
      targetPort: 50300
  selector:
    io.kompose.service: slskd
