apps/navidrome/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  entryPoints:
    - websecure
  routes:
      - kind: Rule
        match: "Host(`navidrome.camsab.me`) && PathPrefix(`/outpost.goauthentik.io/`)"
        priority: 200
        services:
          - name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
            port: 9000
      - kind: Rule
        match: "Host(`navidrome.camsab.me`) && !(PathPrefix(`/share/`) || PathPrefix(`/rest/`))"
        priority: 100
        middlewares:
          - name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
        services:
          - name: navidrome
            port: 80
            namespace: navidrome
      - kind: Rule
        match: "Host(`navidrome.camsab.me`) && PathPrefix(`/share/`)"
        priority: 150
        services:
          - name: navidrome
            port: 80
            namespace: navidrome
      - kind: Rule
        match: "Host(`navidrome.camsab.me`) && PathPrefix(`/rest/`)"
        priority: 100
        services:
          - name: navidrome
            port: 80
            namespace: navidrome
  tls:
    secretName: navidrome
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd
  namespace: navidrome
spec:
  entryPoints:
    - web
  routes:
      - kind: Rule
        match: "Host(`slskd.camsab.me`)"
        services:
          - name: slskd
            port: 80
            namespace: navidrome
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: navidrome
spec:
  entryPoints:
    - web
  routes:
      - kind: Rule
        match: "Host(`lidarr.camsab.me`)"
        services:
          - name: lidarr
            port: 80
            namespace: navidrome
